[fix] STOMP executor 거절 정책 교체와 chat 커넥션 예산 정리 (#255)
* [docs] 부하테스트 후속 과제와 서킷 브레이커 검토 항목 추가

Co-authored-by: Claude <noreply@anthropic.com>

* [docs] 용량 목표와 커넥션 예산 ADR 추가

Co-authored-by: Claude <noreply@anthropic.com>

* [fix] websocket-gateway: STOMP executor 거절 정책 교체와 풀 설정 외부화

Co-authored-by: Claude <noreply@anthropic.com>

* [chore] git-config-repo: chat write pool 커넥션 예산에 맞춰 축소

Co-authored-by: Claude <noreply@anthropic.com>

* [docs] 부하테스트 재측정 파라미터 확정과 근거 보강

Co-authored-by: Claude <noreply@anthropic.com>

* [docs] 채팅 메시지 실패 경로 표 추가

Co-authored-by: Claude <noreply@anthropic.com>

* [chore] git-config-repo: 팬아웃 재측정 위해 STOMP Rate Limit 일시 비활성

Co-authored-by: Claude <noreply@anthropic.com>

---------

Co-authored-by: Claude <noreply@anthropic.com>